--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "FEJStesting",
+  "name": "y",
   "version": "0.0.1",
   "description": "a sample testing setup",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tevko/FEJStesting.git"
+    "url": "git+https://github.com/tevko/FEJStesting.git"
   },
   "keywords": [
     "testing",
@@ -20,9 +20,17 @@
   },
   "homepage": "https://github.com/tevko/FEJStesting",
   "devDependencies": {
-    "jasmine-core": "^2.3.2",
-    "karma": "^0.12.31",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-jasmine": "^0.3.5"
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.12.37",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.8"
+  },
+  "main": "my.conf.js",
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
